--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <!-- /.container-fluid -->
       </nav>
-    </header>
+
 
 
       <div class="row">
@@ -68,7 +68,7 @@
           </p>
         </div>
       </div>
-
+      </header>
     </div>
   </section>
   <!--Section Second-->
@@ -247,7 +247,7 @@
       <div class="row text-center section-four-row">
         <div class="row-same-height">
           <div class="col-xs-12 col-sm-3 col-sm-height">
-            <img src="images/90%icon.png" alt="Flag image">
+            <img src="images/90%icon.png" alt="Flag image" class="img-responsive">
             <div class="caption">
               <h3>WEB DESIGN</h3>
             </div>
@@ -455,7 +455,7 @@
     </div>
 
   </section>
-  <footer>
+
   <nav class="navbar navbar-inverse nav-justified navbar-bottom nav-justified">
     <div class="container">
       <div class="navbar-header">
@@ -486,7 +486,6 @@
       </div>
     </div>
   </nav>
-</footer>
 
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
