--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -35,7 +36,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img src="./images/logo.png" alt="Cuda logo" />
+            <a class="navbar-brand" href="#"><img src="./images/logo.png" alt="Cuda logo" class="img-responsive" />
             </a>
           </div>
 
@@ -64,20 +65,21 @@
       <div class="row">
         <div class="jumbotron text-center jumbotron_1">
           <h2>Hi there! We are new kids on web block and we build awesome websites and mobile apps.</h2>
-          <p><a class="btn btn-primary btn-lg text-center" href="#" role="button" id="btn-work-with-us">WORK WITH US!</a>
+          <p><button class="btn btn-primary btn-lg text-center btn-responsive btn-xs btn-sm" href="#" role="button" id="btn-work-with-us">WORK WITH US!</button>
           </p>
         </div>
       </div>
       </header>
     </div>
   </section>
+
   <!--Section Second-->
   <section id="section-second">
     <div class="container">
       <div class="row">
         <div class="jumbotron our-services text-center">
           <h2>SERVICES WE PROVIDE</h2>
-          <img src="images/line.png">
+          <img src="images/line.png" class="img-responsive">
           <p>We are working wsith both individuals and businesses from all over the globe to create awesome websites and applications. </p>
         </div>
       </div>
@@ -85,28 +87,28 @@
       <div class="row">
         <div class="row-same-height text-center sec-second-row">
           <div class="col-xs-12 col-sm-3 col-sm-height">
-            <img src="images/flag.png" alt="Flag image">
+            <img src="images/flag.png" alt="Flag image" class="img-responsive">
             <div class="caption">
               <h3>BRANDING</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
             </div>
           </div>
           <div class="col-xs-12 col-sm-3 col-sm-height">
-            <img src="images/pencil.png" alt="Pencil image">
+            <img src="images/pencil.png" alt="Pencil image" class="img-responsive">
             <div class="caption">
               <h3>DESIGN</h3>
               <p>minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex</p>
             </div>
           </div>
           <div class="col-xs-12 col-sm-3 col-sm-height">
-            <img src="images/settingimg.png" alt="setting image">
+            <img src="images/settingimg.png" alt="setting image" class="img-responsive">
             <div class="caption">
               <h3>DEVELOPEMENT</h3>
               <p>in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint</p>
             </div>
           </div>
           <div class="col-xs-12 col-sm-3 col-sm-height">
-            <img src="images/aeroplane.png" alt="Rocket image">
+            <img src="images/aeroplane.png" alt="Rocket image" class="img-responsive">
             <div class="caption">
               <h3>ROCKET SCIENCE</h3>
               <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem hfginm dfsdf</p>
@@ -125,60 +127,60 @@
       <div class="row">
         <div class="jumbotron our-team text-center">
           <h2>MEET OUR BEAUTIFUL TEAM</h2>
-          <img src="images/secondline.png">
+          <img src="images/secondline.png" class="img-responsive">
           <p>We are a small team of designers and developers, who help brands with big ideas </p>
         </div>
       </div>
 
       <div class="row">
         <div class="row-same-height text-center sec-third-row">
-          <div class="col-xs-12 col-sm-3 col-sm-height">
-            <img src="images/circle.png" alt="Flag image">
+          <div class="col-xs-12 col-sm-3 col-md-3 col-sm-height">
+            <img src="images/circle.png" alt="Flag image" class="img-responsive">
             <div class="caption">
               <h3>ANNE HATHWAY</h3>
               <h5>CEO/Marketting Guru</h5>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
 
-              <div>
+              <div class="social-media-icons text-center">
                 <span>
-                    <img src="images/fbicon.png">
+                    <img src="images/fbicon.png" class="img-responsive">
                   </span>
                 <span>
-                    <img src="images/twittericon.png">
+                    <img src="images/twittericon.png" class="img-responsive">
                   </span>
                 <span>
-                    <img src="images/linkedinicon.png">
+                    <img src="images/linkedinicon.png" class="img-responsive">
                   </span>
                 <span>
-                    <img src="images/outlookicon.png">
+                    <img src="images/outlookicon.png" class="img-responsive">
                   </span>
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-3 col-sm-height">
-            <img src="images/circle.png" alt="Pencil image">
+          <div class="col-xs-12 col-sm-3 col-md-3 col-sm-height">
+            <img src="images/circle.png" alt="Pencil image" class="img-responsive">
             <div class="caption">
               <h3>KATE UPTON</h3>
               <h5>Creative Director</h5>
               <p>minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex Lorem Ipsum has been the industry's standard dummy text ever rtyryr frrete dcsfdc efdsf dfdf</p>
               <div class="clearfix"></div>
 
-              <div>
+              <div class="social-media-icons">
                 <span>
-                    <img src="images/twittericon.png">
+                    <img src="images/twittericon.png" class="img-responsive">
                   </span>
                 <span>
-                    <img src="images/linkedinicon.png">
+                    <img src="images/linkedinicon.png" class="img-responsive">
                   </span>
                 <span>
-                    <img src="images/outlookicon.png">
+                    <img src="images/outlookicon.png" class="img-responsive">
                   </span>
               </div>
             </div>
           </div>
 
-          <div class="col-xs-12 col-sm-3 col-sm-height">
-            <img src="images/circle.png" alt="setting image">
+          <div class="col-xs-12 col-sm-3 col-md-3 col-sm-height">
+            <img src="images/circle.png" alt="setting image" class="img-responsive">
 
             <div class="caption">
               <h3>OLIVIA WILDE</h3>
@@ -186,18 +188,18 @@
               <p>in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint Lorem Ipsum has been the industry's standard dummy text ever fhfgh fhyrt w34324 yrytr</p>
               <div class="clearfix"></div>
 
-              <div>
+              <div class="social-media-icons">
                 <span>
-                    <img src="images/fbicon.png">
+                    <img src="images/fbicon.png" class="img-responsive">
                   </span>
                 <span>
-                    <img src="images/twittericon.png">
+                    <img src="images/twittericon.png" class="img-responsive">
                   </span>
                 <span>
-                    <img src="images/linkedinicon.png">
+                    <img src="images/linkedinicon.png" class="img-responsive">
                   </span>
                 <span>
-                    <img src="images/outlookicon.png">
+                    <img src="images/outlookicon.png" class="img-responsive">
                   </span>
               </div>
 
@@ -205,23 +207,23 @@
 
           </div>
 
-          <div class="col-xs-12 col-sm-3 col-sm-height">
-            <img src="images/circle.png" alt="Rocket image">
+          <div class="col-xs-12 col-sm-3 col-md-3 col-sm-height">
+            <img src="images/circle.png" alt="Rocket image" class="img-responsive">
 
             <div class="caption">
               <h3>ASHLEY GREENE</h3>
               <h5>SEO/Developer</h5>
               <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem hfginm dfsdf Lorem Idfhg hfhgfgh hgfhf gfd psum has been the industry's standard dummy text ever</p>
               <div class="clearfix"></div>
-              <div>
+              <div class="social-media-icons">
                 <span>
-                    <img src="images/fbicon.png">
+                    <img src="images/fbicon.png" class="img-responsive">
                   </span>
                 <span>
-                    <img src="images/twittericon.png">
+                    <img src="images/twittericon.png" class="img-responsive">
                   </span>
                 <span>
-                    <img src="images/outlookicon.png">
+                    <img src="images/outlookicon.png" class="img-responsive">
                   </span>
               </div>
 
@@ -240,7 +242,7 @@
       <div class="row">
         <div class="jumbotron our-skills text-center">
           <h2>WE GOT SKILLS!</h2>
-          <img src="images/thirdline.png">
+          <img src="images/thirdline.png" class="img-responsive text-center">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco labo </p>
         </div>
       </div>
@@ -253,19 +255,19 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-3 col-sm-height">
-            <img src="images/75%icon.png" alt="Pencil image">
+            <img src="images/75%icon.png" alt="Pencil image" class="img-responsive">
             <div class="caption">
               <h3>HTML / CSS</h3>
             </div>
           </div>
           <div class="col-xs-12 col-sm-3 col-sm-height">
-            <img src="images/70%icon.png" alt="setting image">
+            <img src="images/70%icon.png" alt="setting image" class="img-responsive">
             <div class="caption">
               <h3>GRAPHIC DESIGN</h3>
             </div>
           </div>
           <div class="col-xs-12 col-sm-3 col-sm-height">
-            <img src="images/85%icon.png" alt="Rocket image">
+            <img src="images/85%icon.png" alt="Rocket image" class="img-responsive">
             <div class="caption">
               <h3>UI / UX</h3>
             </div>
@@ -281,19 +283,19 @@
       <div class="row">
         <div class="jumbotron our-portfolio text-center">
           <h2>OUR PORTFOLIO</h2>
-          <img src="images/fifth-sec-line.png">
+          <img src="images/fifth-sec-line.png" class="img-responsive">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco labo </p>
-          <p><a href="#" class="btn btn-default" role="button" id="btn-all">ALL</a>
-            <a href="#" class="btn btn-default" role="button" id="btn-web">WEB</a>
-            <a href="#" class="btn btn-default" role="button" id="btn-apps">APPS</a>
-            <a href="#" class="btn btn-default" role="button" id="btn-icons">ICONS</a>
+          <p><a href="#" class="btn btn-primary btn-default btn-sm btn-responsive" role="button" id="btn-all">ALL</a>
+            <a href="#" class="btn btn-primary btn-default btn-responsive" role="button" id="btn-web">WEB</a>
+            <a href="#" class="btn btn-primary btn-default btn-responsive" role="button" id="btn-apps">APPS</a>
+            <a href="#" class="btn btn-primary btn-default btn-responsive" role="button" id="btn-icons">ICONS</a>
           </p>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6">
           <div class="thumbnail">
-            <img src="images/laptopimg1.png" alt="Isometric Perspective Mock Up">
+            <img src="images/laptopimg1.png" alt="Isometric Perspective Mock Up" class="img-responsive">
             <div class="caption">
               <h3>ISOMETRIC PERSPECTIVE MOCK UP</h3>
             </div>
@@ -331,7 +333,7 @@
       </div>
       <div class="row text-center">
         <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-          <a href="#" class="btn btn-primary btn-lg" role="button" id="btn-load-projects">LOAD MORE PROJECTS</a>
+          <button href="#" class="btn btn-primary btn-lg btn-xs btn-sm" role="button" id="btn-load-projects">LOAD MORE PROJECTS</button>
         </div>
       </div>
 
@@ -345,7 +347,7 @@
       <div class="row">
         <div class="jumbotron customers text-center">
           <h2>WHAT PEOPLES SAY ABOUT US</h2>
-          <img src="images/Sixth-Sec-line.png">
+          <img src="images/Sixth-Sec-line.png" class="img-responsive">
           <p>Our Client Love Us! </p>
         </div>
       </div>
@@ -422,10 +424,11 @@
       <div class="row">
         <div class="jumbotron form-fillup-customers text-center">
           <h2>GET IN TOUCH</h2>
-          <img src="images/Seventh-Sec-line.png">
+          <img src="images/Seventh-Sec-line.png" class="img-responsive">
           <p>1600 Pennsylvania Ave NW,WASHINGTON, DC 20500,United States of America. Tel: (202) 456-1111</p>
 
           <form>
+          <div class="width-form">
             <div class="row custom-row">
               <div class="form-group">
                 <div class="col-xs-12 col-sm-6">
@@ -444,8 +447,9 @@
                 </div>
               </div>
             </div>
+          </div>
             <div class="row text-center">
-              <a href="#" class="btn btn-primary btn-lg" role="button" id="btn-send-message">SEND MESSAGE</a>
+              <button href="#" class="btn btn-primary btn-xs btn-sm btn-lg btn-responsive" role="button" id="btn-send-message">SEND MESSAGE</button>
             </div>
           </form>
         </div>
